@@ -74,6 +74,10 @@ fi
 ### Misc path settings
 ###
 
+isabelle_directory '~'
+isabelle_directory '$ISABELLE_HOME_USER'
+isabelle_directory '~~'
+
 ISABELLE_COMPONENT_REPOSITORY="https://isabelle.in.tum.de/components"
 ISABELLE_COMPONENTS_BASE="$USER_HOME/.isabelle/contrib"
 
